# Distributed-File-System-Storage

./: .gitignore  PROJECT_SUMMARY.md  README.md  main.cpp
Phase 1/master/: Chunker.h
Phase1/: README.md
Phase1/chunkserver/: ChunkStorage.cpp  ChunkStorage.h
Phase2/: CMakeLists.txt  compile_commands.json
Phase2/ChunkServer/: Server.cpp
Phase2/Client/: Client.cpp  Downloader.cpp  Downloader.h  Uploader.cpp  Uploader.h
Phase2/Proto/: ChunkService.proto
Phase3/: master_state.pb
Phase3/chunk_server/: chunk_server.cpp
Phase3/client/: client.cpp  downloader.cpp  downloader.h  uploader.cpp  uploader.h
Phase3/master_server/: master_server.cpp
Phase3/proto/: file_system.proto
Phase4/: CLI_USER_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  WEB_USAGE_GUIDE.md  demo_cli.sh  dfs_cli  dfs_cli.cpp  dfs_demo  dfs_web  dfs_web.cpp  dfs_web_abs  dfs_web_debug  dfs_web_debug2  dfs_web_new  dfs_web_updated  docker-compose.yml  final_demo.sh  run_cli.sh  run_live_demo.sh  simple_dfs_demo.cpp  simple_web_server.cpp  start_server.sh  stop_server.sh  try_dfs.sh  upload.sh  web_demo.sh  web_server.cpp
Phase4/config/: chunkserver.json  client.json  master.json
Phase4/docker/: Dockerfile.base  Dockerfile.chunkserver  Dockerfile.client  Dockerfile.master
Phase4/downloads/: custom_name.txt  test1.txt
Phase4/proto/: file_system.proto
Phase4/scripts/: benchmark.sh  concept_demo.sh  demo.sh  start_cluster.sh  stop_cluster.sh
Phase4/src/chunkserver/: chunk_server.cpp  chunk_server.h  chunk_storage.cpp  chunk_storage.h
Phase4/src/client/: cli.cpp  cli.h  cli_main.cpp  client.cpp  client.h
Phase4/src/common/: config.cpp  crypto.cpp  crypto.h  erasure_coding.cpp  erasure_coding.h  utils.cpp  utils.h
Phase4/src/master/: chunk_allocator.cpp  chunk_allocator.h  master_server.cpp  master_server.h  metadata_manager.cpp  metadata_manager.h  web_server.cpp  web_server.h
Phase4/tests/: crypto_test.cpp  erasure_coding_test.cpp  integration_test.cpp  metadata_manager_test.cpp
master/: Assembler.cpp  Assembler.h  Chunker.cpp
